fix: adjust automation section min-height and title whitespace

--- a/assets/scss/layout/_automation.scss
+++ b/assets/scss/layout/_automation.scss
@@ -3,7 +3,7 @@
 
 .automation-section {
   background: $gradient-automation;
-  min-height: 400px;
+  min-height: 523px;
   display: flex;
   align-items: center;
   @include section-spacing;
@@ -22,6 +22,11 @@
 
   &__title {
     margin-bottom: $spacing-xl;
+    white-space: nowrap;
+
+    @media (max-width: $breakpoint-md) {
+      white-space: normal;
+    }
   }
 
   &__visual {
